--- a/themes/matintah/style.css
+++ b/themes/matintah/style.css
@@ -85,6 +85,7 @@ select {
   height: 100vh;
   position: fixed;
   background: #f0f0f0;
+  border-left: 1px solid rgba(0, 0, 0, 0.2);
   right: -320px;
   display: block;
   z-index: 99999;
@@ -92,12 +93,10 @@ select {
   transform: rotateY(90deg) translate(0, -115px);
   transform-origin: left; }
   #sidebar-cart .widget-title {
-    color: rgba(0, 0, 0, 0.2);
     font-size: 18px;
-    border-bottom: 1px solid;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.2);
     padding: 15px;
     margin-top: 0;
-    margin-bottom: 15px;
     background: #ffffff; }
   #sidebar-cart ul.product_list_widget li a.remove {
     position: absolute;
@@ -108,6 +107,20 @@ select {
     background: transparent; }
   #sidebar-cart .widget_shopping_cart_content {
     padding: 15px; }
+    #sidebar-cart .widget_shopping_cart_content .mini_cart_item {
+      border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+      padding-bottom: 15px;
+      margin-bottom: 15px; }
+      #sidebar-cart .widget_shopping_cart_content .mini_cart_item .variation {
+        display: block;
+        clear: both;
+        padding-top: 10px;
+        padding-left: 0;
+        border-left: none;
+        font-size: 12px;
+        text-transform: capitalize; }
+        #sidebar-cart .widget_shopping_cart_content .mini_cart_item .variation dd {
+          margin: 0; }
   #sidebar-cart .woocommerce ul.cart_list li img, #sidebar-cart .woocommerce ul.product_list_widget li img {
     float: left;
     margin-left: 0;
@@ -123,7 +136,9 @@ select {
     #sidebar-cart .buttons a {
       margin-top: 10px; }
   #sidebar-cart ul {
-    padding: 0; }
+    padding: 0;
+    height: calc(100vh - 100px);
+    overflow: scroll; }
     #sidebar-cart ul li {
       list-style: none;
       margin-left: 0;
@@ -242,6 +257,40 @@ img.custom-logo {
       z-index: 3; }
     #home-header .wrapper #fadetriangles {
       background: url("img/fadetriangles.png") 50% 100% repeat-x fixed; }
+
+.typed {
+  font-weight: 400;
+  color: #666;
+  text-align: center;
+  position: absolute;
+  left: 50%;
+  bottom: 30px;
+  transform: translate(-50%, 0); }
+
+#front_page_widget .widget-title {
+  display: none; }
+#front_page_widget .product_list_widget {
+  padding-left: 0; }
+  #front_page_widget .product_list_widget li {
+    list-style: none;
+    padding: 0; }
+    #front_page_widget .product_list_widget li span.product-title {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      text-align: center;
+      font-size: 20px;
+      font-weight: 700;
+      text-transform: uppercase; }
+    #front_page_widget .product_list_widget li .woocommerce-Price-amount {
+      display: none; }
+    #front_page_widget .product_list_widget li img {
+      width: 100%;
+      opacity: 0.3;
+      transition: 0.3s; }
+      #front_page_widget .product_list_widget li img:hover {
+        opacity: 1; }
 
 .woocommerce label {
   font-size: 0.8em;
