--- a/themes/matintah/style.scss
+++ b/themes/matintah/style.scss
@@ -110,6 +110,7 @@ select {
   height: 100vh;
   position: fixed;
   background: #f0f0f0;
+  border-left: 1px solid $shade;
   right: -320px;
   display: block;
   z-index: 99999;
@@ -118,12 +119,10 @@ select {
   transform-origin: left;
 
   .widget-title {
-    color: $shade;
     font-size: 18px;
-    border-bottom: 1px solid;
+    border-bottom: 1px solid $shade;
     padding: 15px;
     margin-top: 0;
-    margin-bottom: 15px;
     background: #ffffff;
 
   }
@@ -137,6 +136,23 @@ select {
   }
   .widget_shopping_cart_content {
     padding: 15px;
+    .mini_cart_item {
+      border-bottom: 1px solid $shade;
+      padding-bottom: 15px;
+      margin-bottom: 15px;
+      .variation {
+        display: block;
+        clear: both;
+        padding-top: 10px;
+        padding-left: 0;
+        border-left: none;
+        font-size: 12px;
+        text-transform: capitalize;
+        dd {
+          margin: 0
+        }
+      }
+    }
   }
 
   .woocommerce ul.cart_list li img, .woocommerce ul.product_list_widget li img {
@@ -159,6 +175,8 @@ select {
   }
   ul {
     padding: 0;
+    height: calc(100vh - 100px);
+    overflow: scroll;
     li {
       list-style: none;
       margin-left: 0;
@@ -307,6 +325,50 @@ img.custom-logo {
   }
 }
 
+.typed {
+  font-weight: 400;
+  color: #666;
+  text-align: center;
+  position: absolute;
+  left: 50%;
+  bottom: 30px;
+  transform: translate(-50%, 0);
+}
+#front_page_widget {
+  .widget-title {
+    display: none;
+  }
+  .product_list_widget {
+    padding-left: 0;
+    li {
+      list-style: none;
+      padding: 0;
+      span.product-title {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        text-align: center;
+        font-size: 20px;
+        font-weight: 700;
+        text-transform: uppercase;
+      }
+      .woocommerce-Price-amount {
+        display: none;
+      }
+      img {
+        width: 100%;
+        opacity: 0.3;
+        transition: 0.3s;
+        &:hover {
+          opacity: 1;
+        }
+      }
+    }
+  }
+}
+  
+
 
 // WOOCOMMERCE
 
@@ -454,7 +516,6 @@ form.woocommerce-ordering {
     background: transparent;
   }
 }
-  
 
 li.product.type-product{
   .woocommerce-LoopProduct-link{
@@ -496,7 +557,10 @@ li.product.type-product{
     }
   } 
 }
-  
+
+
+
+
 // PRODUCT PAGE
 
 #single-product-summary {
