--- a/themes/matintah/style.css
+++ b/themes/matintah/style.css
@@ -8,27 +8,50 @@ License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
 Text Domain: matintah
 */
-@import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,600|Bowlby+One");
+@font-face {
+  font-family: 'Odudo';
+  src: url("fonts/odudosoft-bold-webfont.woff");
+  font-weight: 700; }
+@font-face {
+  font-family: 'Odudo';
+  src: url("fonts/odudosoft-semibold-webfont.woff");
+  font-weight: 600; }
+@font-face {
+  font-family: 'Odudo';
+  src: url("fonts/odudosoft-light-webfont.woff");
+  font-weight: 400; }
+@font-face {
+  font-family: 'Fairwater Script';
+  src: url("fonts/Fairwater-Script-Regular.woff"); }
 body {
   padding-top: 115px;
   min-height: 100vh;
   transition: 0.5s cubic-bezier(0.11, 0.26, 0.26, 0.88);
   color: black;
   font-size: 16px;
-  font-family: 'Source Sans Pro', serif; }
+  font-family: 'Odudo', serif; }
   @media all and (max-width: 767px) {
     body {
-      font-size: 16px; } }
+      font-size: 14px; } }
 
 h1, h2, h3, h4, h5, h6 {
-  font-family: 'Source Sans Pro', sans-serif;
-  font-weight: 700;
+  font-family: 'Odudo', sans-serif;
+  font-weight: bold;
   color: inherit; }
+
+h1 {
+  font-size: 3.5em; }
+
+h2 {
+  font-size: 2.5em; }
 
 a, a:hover, a:focus, a:visited {
   color: inherit;
   text-decoration: none;
   margin-bottom: 2px; }
+
+strong {
+  font-weight: 600; }
 
 img {
   max-width: 100%; }
@@ -38,12 +61,22 @@ select {
   font-weight: 600;
   background: transparent; }
 
+button {
+  max-width: 100%;
+  text-align: center;
+  border: none;
+  padding: 10px 20px; }
+
 .spacer {
   height: 30px;
   clear: both; }
 
 .clearfix {
   clear: both; }
+
+.chapeu {
+  font-family: 'Fairwater Script';
+  font-size: 0.6em; }
 
 #footer-bar {
   margin-top: 50px; }
@@ -220,56 +253,63 @@ img.custom-logo {
   transition: 0.3s; }
 
 #home-header {
-  height: 100vh;
-  /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#8db379+0,7da570+100 */
-  background: #8db379;
-  /* Old browsers */
-  background: -moz-radial-gradient(center, ellipse cover, #8db379 0%, #7da570 100%);
-  /* FF3.6-15 */
-  background: -webkit-radial-gradient(center, ellipse cover, #8db379 0%, #7da570 100%);
-  /* Chrome10-25,Safari5.1-6 */
-  background: radial-gradient(ellipse at center, #8db379 0%, #7da570 100%);
-  /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#8db379', endColorstr='#7da570',GradientType=1 );
-  /* IE6-9 fallback on horizontal gradient */
-  background-size: cover;
-  overflow: hidden; }
-  #home-header .wrapper {
-    position: relative;
-    height: 100%;
-    height: 100vh; }
-    #home-header .wrapper .meta {
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      z-index: 9; }
-    #home-header .wrapper .parallax {
-      left: 0;
-      top: 0;
-      position: absolute;
-      width: 100%;
-      height: 100%; }
-    #home-header .wrapper #bonecas-1 {
-      background: url("img/bonecas-1.png") 50% 0 no-repeat fixed;
-      background-size: auto 110%;
-      z-index: 2; }
-    #home-header .wrapper #triangles {
-      background: url("img/triangles.png") 50% 0 no-repeat fixed;
-      background-size: 100% auto;
-      z-index: 4; }
-    #home-header .wrapper #fadetriangles {
-      background: url("img/fadetriangles.png") 50% 100% repeat-x fixed; }
+  padding: 100px 0 130px;
+  background: #ffc709;
+  background-repeat: no-repeat;
+  background-position: right -10%;
+  background-size: auto 120%; }
+  #home-header h1 {
+    color: white;
+    text-shadow: 0px 0px 3px rgba(0, 0, 0, 0.3); }
+    #home-header h1 .chapeu {
+      font-size: 0.6em;
+      color: black;
+      text-shadow: none; }
+  #home-header button {
+    min-width: 300px;
+    margin: 5px;
+    background-color: #ffc709;
+    border: 1px solid black; }
+    #home-header button:first-of-type {
+      background-color: #2c3889;
+      color: white; }
 
-.typed {
-  margin: 0;
-  z-index: 3;
-  color: #fff;
-  text-align: center;
-  position: absolute;
-  left: 50%;
-  bottom: 50%;
-  transform: translate(-50%, -50%); }
+#aromas {
+  min-height: 500px;
+  background-size: auto 100%;
+  background-position: center;
+  background-repeat: repeat-x; }
+  #aromas .meta {
+    padding: 15px 30px 30px 30px;
+    margin-top: 100px;
+    margin-bottom: 50px;
+    border: 1px solid black;
+    background: white; }
+    #aromas .meta h2 {
+      margin-top: 0; }
+
+#amuletos {
+  padding: 100px 0 130px;
+  background: #ec606a; }
+  #amuletos .meta {
+    max-width: 480px;
+    margin: 0 auto; }
+    #amuletos .meta h2 {
+      margin-top: 0;
+      color: white;
+      text-shadow: 0px 0px 3px rgba(0, 0, 0, 0.3); }
+      #amuletos .meta h2 .chapeu {
+        color: black;
+        text-shadow: none; }
+
+#section {
+  padding: 30px 0; }
+  #section .meta {
+    max-width: 480px;
+    margin: 0 auto;
+    border: 3px solid #75b4bb; }
+    #section .meta h2 {
+      margin-top: 15px; }
 
 #front_page_widget .widget-title {
   display: none; }
@@ -428,7 +468,7 @@ li.product.type-product .woocommerce-LoopProduct-link {
 li.product.type-product a.button.product_type_variable.add_to_cart_button {
   text-align: center;
   font-weight: 600;
-  color: #8db379;
+  color: #38b680;
   font-size: 14px;
   display: block;
   margin-top: -22px;
@@ -490,5 +530,63 @@ li.product.type-product:hover span.price {
     font-size: 14px; }
   #single-product-summary p.comment-notes {
     font-size: 13px; }
+
+#artista-header {
+  background: #38b680;
+  padding-top: 40px;
+  padding-bottom: 60px;
+  margin-bottom: 50px; }
+  #artista-header .chapeu {
+    font-size: 30px;
+    color: #005035; }
+  #artista-header h1 {
+    margin-top: 0;
+    color: white; }
+  #artista-header button {
+    background: #323537;
+    color: white;
+    margin: 0 13px 0 0; }
+
+.cv-title {
+  border-bottom: 5px solid #ffc709;
+  margin-top: 0; }
+  .cv-title .chapeu {
+    font-size: 0.6em;
+    color: #86888a; }
+
+ul.widget-cv {
+  padding: 5px 0 5px 80px; }
+  ul.widget-cv li {
+    list-style-type: none;
+    position: relative;
+    padding: 15px 0; }
+    ul.widget-cv li p {
+      margin: 0 0 7px; }
+    ul.widget-cv li .ano {
+      position: absolute;
+      left: -70px;
+      top: 13px;
+      color: #86888a; }
+    ul.widget-cv li .mes {
+      text-transform: uppercase; }
+      ul.widget-cv li .mes strong {
+        color: #86888a; }
+    ul.widget-cv li::before {
+      content: '';
+      width: 10px;
+      background: #86888a;
+      height: 10px;
+      position: absolute;
+      transform: translate(-20px, 5px);
+      border-radius: 100%; }
+    ul.widget-cv li div::before {
+      content: '';
+      width: 2px;
+      background: #86888a;
+      height: 100%;
+      position: absolute;
+      transform: translate(-16px, 15px); }
+    ul.widget-cv li:last-child div::before {
+      display: none; }
 
 /*# sourceMappingURL=style.css.map */
